{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 393,
  "lineage": "37965060-fdc1-3f86-ca54-27fc767fa67c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-lesson9",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:250832025418:internet-gateway/igw-06d0c9f67e8dd2b50",
            "id": "igw-06d0c9f67e8dd2b50",
            "owner_id": "250832025418",
            "tags": {
              "Name": "igw-lesson9"
            },
            "tags_all": {
              "Name": "igw-lesson9"
            },
            "vpc_id": "vpc-0282ac7ed35f80520"
          },
          "dependencies": [
            "aws_vpc.vpc-lesson9"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb-lesson9",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:250832025418:loadbalancer/app/lb-lesson9/21a3d3fd74276074",
            "arn_suffix": "app/lb-lesson9/21a3d3fd74276074",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "lb-lesson9-1309756332.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:250832025418:loadbalancer/app/lb-lesson9/21a3d3fd74276074",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "lb-lesson9",
            "preserve_host_header": false,
            "security_groups": [
              "sg-08e03369ecde7b174"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-050070ef5fe766b39"
              },
              {
                "subnet_id": "subnet-0955b64608868f567"
              }
            ],
            "subnets": [
              "subnet-050070ef5fe766b39",
              "subnet-0955b64608868f567"
            ],
            "vpc_id": "vpc-0282ac7ed35f80520",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.sg-lesson9",
            "aws_subnet.use1a-lesson9",
            "aws_subnet.use1c-lesson9",
            "aws_vpc.vpc-lesson9"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb-lister-lesson9",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:250832025418:listener/app/lb-lesson9/21a3d3fd74276074/d6ed8be2cd553ee3",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:250832025418:targetgroup/lb-tg-lesson9/7407ea5533787283",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:250832025418:listener/app/lb-lesson9/21a3d3fd74276074/d6ed8be2cd553ee3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:250832025418:loadbalancer/app/lb-lesson9/21a3d3fd74276074",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.lb-lesson9",
            "aws_lb_target_group.lb-tg-lesson9",
            "aws_security_group.sg-lesson9",
            "aws_subnet.use1a-lesson9",
            "aws_subnet.use1c-lesson9",
            "aws_vpc.vpc-lesson9"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lb-tg-lesson9",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:250832025418:targetgroup/lb-tg-lesson9/7407ea5533787283",
            "arn_suffix": "targetgroup/lb-tg-lesson9/7407ea5533787283",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/status",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:250832025418:targetgroup/lb-tg-lesson9/7407ea5533787283",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "lb-tg-lesson9",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0282ac7ed35f80520"
          },
          "dependencies": [
            "aws_vpc.vpc-lesson9"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-lesson9",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:250832025418:route-table/rtb-0f4c0d57dbb94a94d",
            "id": "rtb-0f4c0d57dbb94a94d",
            "owner_id": "250832025418",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06d0c9f67e8dd2b50",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-lesson9"
            },
            "tags_all": {
              "Name": "rt-lesson9"
            },
            "timeouts": null,
            "vpc_id": "vpc-0282ac7ed35f80520"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw-lesson9",
            "aws_vpc.vpc-lesson9"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a-lesson9-use1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07dcb9133e502b340",
            "route_table_id": "rtb-0f4c0d57dbb94a94d",
            "subnet_id": "subnet-050070ef5fe766b39"
          },
          "dependencies": [
            "aws_internet_gateway.igw-lesson9",
            "aws_route_table.rt-lesson9",
            "aws_subnet.use1a-lesson9",
            "aws_vpc.vpc-lesson9"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a-lesson9-use1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-042e8f6dc2e88d483",
            "route_table_id": "rtb-0f4c0d57dbb94a94d",
            "subnet_id": "subnet-0955b64608868f567"
          },
          "dependencies": [
            "aws_internet_gateway.igw-lesson9",
            "aws_route_table.rt-lesson9",
            "aws_subnet.use1c-lesson9",
            "aws_vpc.vpc-lesson9"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:250832025418:security-group/sg-068e39b7f80a7cb2c",
            "description": "Security group for RDS instance in Lesson 9",
            "egress": [],
            "id": "sg-068e39b7f80a7cb2c",
            "ingress": [],
            "name": "rds-sg-lesson9",
            "name_prefix": "",
            "owner_id": "250832025418",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0282ac7ed35f80520"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-lesson9"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-lesson9",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:250832025418:security-group/sg-08e03369ecde7b174",
            "description": "Security group for Lesson9",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08e03369ecde7b174",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "security_group_for_lesson9",
            "name_prefix": "",
            "owner_id": "250832025418",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-lesson9"
            },
            "tags_all": {
              "Name": "sg-lesson9"
            },
            "timeouts": null,
            "vpc_id": "vpc-0282ac7ed35f80520"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-lesson9"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rds-ingress-from-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-3694070298",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-068e39b7f80a7cb2c",
            "security_group_rule_id": "sgr-0ba18a46210dcf18f",
            "self": false,
            "source_security_group_id": "sg-08e03369ecde7b174",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.rds-sg",
            "aws_security_group.sg-lesson9",
            "aws_vpc.vpc-lesson9"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "use1a-lesson9",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:250832025418:subnet/subnet-050070ef5fe766b39",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-050070ef5fe766b39",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "250832025418",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "use1a-lesson9"
            },
            "tags_all": {
              "Name": "use1a-lesson9"
            },
            "vpc_id": "vpc-0282ac7ed35f80520"
          },
          "dependencies": [
            "aws_vpc.vpc-lesson9"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "use1c-lesson9",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:250832025418:subnet/subnet-0955b64608868f567",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0955b64608868f567",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "250832025418",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "use1c-lesson9"
            },
            "tags_all": {
              "Name": "use1c-lesson9"
            },
            "vpc_id": "vpc-0282ac7ed35f80520"
          },
          "dependencies": [
            "aws_vpc.vpc-lesson9"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-lesson9",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:250832025418:vpc/vpc-0282ac7ed35f80520",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fb3486f17b133774",
            "default_route_table_id": "rtb-0023e0006dc1821f2",
            "default_security_group_id": "sg-08e036c075d4c31ab",
            "dhcp_options_id": "dopt-0f8eeb60f204d9ca2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0282ac7ed35f80520",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0023e0006dc1821f2",
            "owner_id": "250832025418",
            "tags": {
              "Name": "vpc-lesson9"
            },
            "tags_all": {
              "Name": "vpc-lesson9"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}